--- a/style_cad.css
+++ b/style_cad.css
@@ -5,10 +5,11 @@
 
 
 }
+
 .container {
-    display: grid;
-    grid-column: auto;
-  }
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;  }
 h1{
   margin: 34px;
       border-bottom: 3px solid;
@@ -19,19 +20,15 @@ h1{
 }
   
   .image-container {
-    display: grid;
-    grid-column: auto;
-
     margin-top: 10px;
   }
   
   .content {
-    flex: 30%;
     display: flex;
+    flex: 30%;
     margin: 12px;
     padding: 20px;
     flex-direction: column;
-    flex-wrap: wrap;
   
   }
   .item{
@@ -56,7 +53,14 @@ h1{
     border-bottom: 2px solid rgb(24, 138, 28);
     }
     .item2{
-      margin-right: 20px;
-      border: none;
+      font-size: medium;
+      margin-right: 40px;
+      align-content: center;
+      color: #ffff;
+      width: 100px;
+      border-radius: 25px;
+      padding: 13px;
+      background-color: rgb(24, 138, 28);
+      border: 1px solid rgb(24, 138, 28) ;
     }
   
