--- a/Css_login.css
+++ b/Css_login.css
@@ -160,6 +160,8 @@ body{
   background-color: #D9D9D9;
   outline: 0;
   padding-left: 10px;
+  color: #188A1C;
+  font-family: 'Kreon';
 }
 
 .password{
@@ -184,9 +186,11 @@ body{
   background-color: #D9D9D9;
   outline: 0;
   padding-left: 10px;
+  color: #188A1C;
+  font-family: 'Kreon';
 }
 
-.botton a{
+.botton input, a{
   display: flex;
   flex-direction: column;
   width: 12vw;
@@ -194,6 +198,7 @@ body{
   background-image: linear-gradient(to right, #188A1C 39%, #062407 98%);
   border-radius: 30px;
   margin-bottom: 25px;
+  border: none;
 }
 
 .enter {
@@ -201,7 +206,7 @@ body{
   font-family: 'Kreon';
   justify-content: center;
   align-items: center;
-  text-decoration: none;
+  font-size: 15px;
 }
 
 .cadastrar {
