--- a/Css_login.css
+++ b/Css_login.css
@@ -160,6 +160,9 @@ body{
   background-color: #D9D9D9;
   outline: 0;
   padding-left: 10px;
+  color: #188A1C;
+  font-family: 'Kreon';
+
 }
 
 .password{
@@ -184,16 +187,24 @@ body{
   background-color: #D9D9D9;
   outline: 0;
   padding-left: 10px;
+  color: #188A1C;
+  font-family: 'Kreon';
 }
 
-.botton a{
+.password:required{
+  color: green;
+}
+
+.botton input, a{
   display: flex;
   flex-direction: column;
   width: 12vw;
   height: 6vh;
-  background-image: linear-gradient(to right, #188A1C 39%, #062407 98%);
+  background: linear-gradient(to right, #188A1C 39%, #062407 98%);
   border-radius: 30px;
   margin-bottom: 25px;
+  border: none;
+  transition: all 0.5s ease-in-out;
 }
 
 .enter {
@@ -201,7 +212,12 @@ body{
   font-family: 'Kreon';
   justify-content: center;
   align-items: center;
-  text-decoration: none;
+  font-size: 15px;
+  cursor: pointer;
+}
+
+.enter:hover{
+  filter: brightness( 90% );
 }
 
 .cadastrar {
@@ -210,6 +226,10 @@ body{
   justify-content: center;
   align-items: center;
   text-decoration: none;
+}
+
+.cadastrar:hover{
+  filter: brightness( 90% );
 }
 
 
