--- a/style_cad.css
+++ b/style_cad.css
@@ -1,77 +1,106 @@
-
 *{
-    font-family: 'Kreon';
-    color:  rgb(24, 138, 28);
+  font-family: 'Kreon';
+  color:  rgb(24, 138, 28);
+
+
+
+}
+.form-container {
+  display: flex;
+  flex-direction: column;
+}
+.container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;  }
+h1{
+  margin: 34px;
+      border-bottom: 3px solid;
+      border-color: rgb(24, 138, 28);
+  font-weight: bold;
+  font-size: 40px;
+
+}
   
-  
-  
+  .image-container {
+    margin-top: 10px;
   }
-  .form-container {
+  
+  .content1 {
     display: flex;
+    flex-wrap: wrap;
+    flex: 30%;
+    margin: 12px;
+    padding: 20px;
     flex-direction: column;
+  
   }
-  .container {
+  .content2 {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;  }
-  h1{
-    margin: 34px;
-        border-bottom: 3px solid;
-        border-color: rgb(24, 138, 28);
-    font-weight: bold;
-    font-size: 40px;
+    flex-wrap: wrap;
+    flex: 30%;
+    margin: 12px;
+    padding: 20px;
+    flex-direction: column;
   
   }
+  .item{
+    display: flex;
+    flex-wrap: nowrap;
     
-    .image-container {
-      margin-top: 10px;
+          }
+  label{
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
+
+  .item .item2:hover {
+    cursor: pointer;
+    filter: brightness(90%);
+
+  }
+
+  input{
+    width: 220px;
+    border: none;
+    font-weight:normal;
+    border-bottom: 2px solid rgb(24, 138, 28);
+    outline: 0;
     }
-    
-    .content {
+    .item2{
+      font-size: medium;
       display: flex;
+      flex-wrap:wrap;
+      justify-content: center;
+      margin: 100px; 
+      margin-top: 60px;     
+      color: #ffff;
+      width: 130px;
+      border-radius: 25px;
+      padding: 13px;
+      background: linear-gradient(to right, rgb(24, 138, 28) 39%, #062407 98%) ;
+      border: 1px solid rgb(24, 138, 28) ;
+      transition: all 0.5s ease-in-out;
+    }
+
+    @media screen and (max-width: 600px) {
+     .item{
       flex-wrap: wrap;
-      flex: 30%;
-      margin: 12px;
-      padding: 20px;
-      flex-direction: column;
+     }
+      .container {
+        flex-direction: column;
+        flex-wrap: wrap;
+      }
     
-    }
-    .item{
-      display: flex;
-      flex-wrap: nowrap;
-      
-            }
-    label{
-      margin-top: 15px;
-      margin-bottom: 15px;
-    }
-  
-    .item .item2:hover {
-      cursor: pointer;
-      filter: brightness(90%);
-  
-    }
-  
-    input{
-      width: 220px;
-      border: none;
-      font-weight:normal;
-      border-bottom: 2px solid rgb(24, 138, 28);
-      outline: 0;
+      .content1 {
+        flex:100%;
       }
-      .item2{
-        font-size: medium;
-        display: flex;
-        flex-wrap:wrap;
-        margin: 100px;      
-        color: #ffff;
-        width: 130px;
-        border-radius: 25px;
-        padding: 13px;
-        background: linear-gradient(to right, rgb(24, 138, 28) 39%, #062407 98%) ;
-        border: 1px solid rgb(24, 138, 28) ;
-        transition: all 0.5s ease-in-out;
+      .content2{
+        margin-top: 0;
+        flex:100%;
+
       }
-      
-      
-  
+      .image-container{
+        display: none;
+      }
+    }
