--- a/style_cad.css
+++ b/style_cad.css
@@ -26,7 +26,16 @@ h1{
     margin-top: 10px;
   }
   
-  .content {
+  .content1 {
+    display: flex;
+    flex-wrap: wrap;
+    flex: 30%;
+    margin: 12px;
+    padding: 20px;
+    flex-direction: column;
+  
+  }
+  .content2 {
     display: flex;
     flex-wrap: wrap;
     flex: 30%;
@@ -62,7 +71,9 @@ h1{
       font-size: medium;
       display: flex;
       flex-wrap:wrap;
-      margin: 100px;      
+      justify-content: center;
+      margin: 100px; 
+      margin-top: 60px;     
       color: #ffff;
       width: 130px;
       border-radius: 25px;
@@ -70,7 +81,26 @@ h1{
       background: linear-gradient(to right, rgb(24, 138, 28) 39%, #062407 98%) ;
       border: 1px solid rgb(24, 138, 28) ;
       transition: all 0.5s ease-in-out;
-
-
     }
-  
+
+    @media screen and (max-width: 600px) {
+     .item{
+      flex-wrap: wrap;
+     }
+      .container {
+        flex-direction: column;
+        flex-wrap: wrap;
+      }
+    
+      .content1 {
+        flex:100%;
+      }
+      .content2{
+        margin-top: 0;
+        flex:100%;
+
+      }
+      .image-container{
+        display: none;
+      }
+    }
