--- a/Css_home.css
+++ b/Css_home.css
@@ -2,16 +2,21 @@
 
 * {
   font-family: 'Kreon';
+  margin: 0;
 }
 body {
   margin: 0;
+  padding: 0;
 }
 
 header {
   background: linear-gradient(to right, #188a1c 0%, #062407 100%);
   display: flex;
   justify-content: space-between;
-  height: 10vh;
+  height: 13vh;
+  position: fixed;   
+  width: 100%;
+  top: 0;
 }
 
 .information{
@@ -33,27 +38,62 @@ header {
 .information img {
   width: 2.5rem;
   height: 2.5rem;
-  background-size: contain;
 }
 
-button {
-  background: transparent;
-  border: none;
+.nav{
+  float: left;
+  width: 100%;
 }
 
-.menu ul {
-  background-color: black;
-  display: flex;
-  flex-direction: column;
-  text-align: center;
+ul{
   list-style: none;
-  margin-top: 500px;
+  padding-left: 0;
+
+}
+
+li{
+  display: block;
+  float: left;
+  padding: 1rem;
+  position: relative;
+  text-decoration: none;
+  transition-duration: 0.5s;
 }
 
 
-.menu li:hover, button:hover{
+li ul {
+  background: #188a1c;
+  visibility: hidden;
+  opacity: 0;
+  min-width: 15rem;
+  position: absolute;
+  transition: all 0.5s ease;
+  margin-top: 1rem;
+  left: 0;
+  display: none;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+}
+
+li ul li{
+  clear: both;
+  width: 28vw;
+}
+
+ul li:hover, ul li:focus-within{
+  background-color: #4CAF5C;
   cursor: pointer;
-  opacity: 0.8;
+  font-weight: bolder;
+  transition: 0.3s;
+}
+
+li a:hover{
+  color: green;
+}
+
+ul li:hover>ul, ul li:focus-within>ul, ul li ul:hover, ul li ul:focus {
+  visibility: visible;
+  opacity: 1;
+  display: block;
 }
 
 .click {
