--- a/style_cad.css
+++ b/style_cad.css
@@ -1,9 +1,8 @@
-*{
+* {
   font-family: 'Kreon';
-  color:  rgb(24, 138, 28);
-
-
-
+  color: rgb(24, 138, 28);
+  padding: 0;
+  margin: 0;
 }
 .form-container {
   display: flex;
@@ -12,95 +11,91 @@
 .container {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;  }
-h1{
+  justify-content: space-between;
+}
+h1 {
   margin: 34px;
-      border-bottom: 3px solid;
-      border-color: rgb(24, 138, 28);
+  border-bottom: 3px solid;
+  border-color: rgb(24, 138, 28);
   font-weight: bold;
   font-size: 40px;
-
 }
-  
-  .image-container {
-    margin-top: 10px;
-  }
-  
-  .content1 {
-    display: flex;
+
+.content1 {
+  display: flex;
+  flex-wrap: wrap;
+  flex: 30%;
+  margin: 12px;
+  padding: 20px;
+  flex-direction: column;
+}
+.content2 {
+  display: flex;
+  flex-wrap: wrap;
+  flex: 30%;
+  margin: 12px;
+  padding: 20px;
+  flex-direction: column;
+}
+.item {
+  display: flex;
+  flex-wrap: nowrap;
+}
+label {
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.item .item2:hover {
+  cursor: pointer;
+  filter: brightness(90%);
+}
+
+input {
+  width: 220px;
+  border: none;
+  font-weight: normal;
+  border-bottom: 2px solid rgb(24, 138, 28);
+  outline: 0;
+}
+.item2 {
+  font-size: medium;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  color: #ffff;
+  width: 130px;
+  border-radius: 25px;
+  padding: 13px;
+  background: linear-gradient(to right, rgb(24, 138, 28) 39%, #062407 98%);
+  border: 1px solid rgb(24, 138, 28);
+  transition: all 0.5s ease-in-out;
+}
+
+.but-cad {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  margin-top: 50px;
+}
+
+@media screen and (max-width: 600px) {
+  .item {
     flex-wrap: wrap;
-    flex: 30%;
-    margin: 12px;
-    padding: 20px;
+  }
+  .container {
     flex-direction: column;
-  
+    flex-wrap: wrap;
+  }
+
+  .content1 {
+    flex: 100%;
   }
   .content2 {
-    display: flex;
-    flex-wrap: wrap;
-    flex: 30%;
-    margin: 12px;
-    padding: 20px;
-    flex-direction: column;
-  
+    margin-top: 0;
+    flex: 100%;
   }
-  .item{
-    display: flex;
-    flex-wrap: nowrap;
-    
-          }
-  label{
-    margin-top: 15px;
-    margin-bottom: 15px;
+  .image-container {
+    display: none;
   }
-
-  .item .item2:hover {
-    cursor: pointer;
-    filter: brightness(90%);
-
-  }
-
-  input{
-    width: 220px;
-    border: none;
-    font-weight:normal;
-    border-bottom: 2px solid rgb(24, 138, 28);
-    outline: 0;
-    }
-    .item2{
-      font-size: medium;
-      display: flex;
-      flex-wrap:wrap;
-      justify-content: center;
-      margin: 100px; 
-      margin-top: 60px;     
-      color: #ffff;
-      width: 130px;
-      border-radius: 25px;
-      padding: 13px;
-      background: linear-gradient(to right, rgb(24, 138, 28) 39%, #062407 98%) ;
-      border: 1px solid rgb(24, 138, 28) ;
-      transition: all 0.5s ease-in-out;
-    }
-
-    @media screen and (max-width: 600px) {
-     .item{
-      flex-wrap: wrap;
-     }
-      .container {
-        flex-direction: column;
-        flex-wrap: wrap;
-      }
-    
-      .content1 {
-        flex:100%;
-      }
-      .content2{
-        margin-top: 0;
-        flex:100%;
-
-      }
-      .image-container{
-        display: none;
-      }
-    }
+}
