--- a/Css_home.css
+++ b/Css_home.css
@@ -1,3 +1,4 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Kreon:wght@300..700&display=swap');
 
 * {
@@ -144,9 +145,7 @@ section{
 }
 footer {
   background: linear-gradient(to right, #188a1c 0%, #062407 100%);
-  flex-direction: column;
   display: flex;
-  position:static;
   justify-content: space-between;
   height: 13vh;
   padding-left: 20px;
@@ -164,12 +163,10 @@ footer {
 }
 
 .direita {
-  margin-left: 850px ;
-  right: 0;
-  padding-right: 75px;
-  flex-direction: row;
-  align-items: center;
-  gap: 2rem;
+  display: flex;
+  align-items: end;
+  padding-bottom: 20px;
+  letter-spacing: 0.15rem;
 }
 .but-envio{
   font-size: medium;
@@ -202,15 +199,20 @@ main{
 .form-denuncia{
   display: flex;
   flex-direction: column;
+  align-items: center;
   margin-left: 0;
+}
+
+
+.denuncia h2{
+  margin-bottom: 30px;
 }
 select, textarea, #local, #date{
   padding: 5px;
   width: 210px;
   margin: 5px;
   border-radius: 60px;
-  background-color: #d9d9d9;
-  opacity: 70%;
+  background-color: #dedede;
   outline: 0;
   border-color: 1px solid #d9d9d9;
   color: #000000;
@@ -222,5 +224,5 @@ select, textarea, #local, #date{
   justify-content:flex-start;
   align-items: center;
   margin-top: 13vh;
-  border-left: 15px solid rgb(24, 138, 28);
+  border-left: 15px solid rgb(58, 119, 58)
 }
