--- a/Css_login.css
+++ b/Css_login.css
@@ -12,8 +12,8 @@ body{
   width: 60vw;
   height: 100vh;
   overflow: hidden;
-  border-top-right-radius: 25px;
-  border-bottom-right-radius: 25px;
+  border-top-right-radius: 1.5625rem;
+  border-bottom-right-radius:  1.5625rem;
 }
 
 .slides{
@@ -33,7 +33,7 @@ body{
 }
 
 .slide img{
-  width: 922px;
+  width: 58rem;
   height: 100vh;
   background-size: cover;
 }
@@ -47,15 +47,15 @@ body{
 }
 
 .manual-btn{
-  border: 2px solid white;
-  padding: 5px;
-  border-radius: 10px;
+  border: 0.125rem solid white;
+  padding: 0.3125rem;
+  border-radius: 0.625rem;
   cursor: pointer;
   transition: 1s;
 }
 
 .manual-btn:not(:last-child){
-  margin-right: 70px;
+  margin-right: 4.375rem;
 }
 
 .manual-btn:hover{
@@ -83,23 +83,23 @@ body{
 }
 
 .navigation-auto div{
-  border: 2px solid blue;
-  padding: 5px;
-  border-radius: 10px;
+  border: 0.125rem solid blue;
+  padding: 0.3125rem;
+  border-radius: 0.625rem;
   cursor: pointer;
   transition: 1s;
 }
 
 .navigation-auto {
   position: absolute;
-  width: 800px;
-  margin-top: 694.5px;
+  width: 50rem;
+  margin-top: 43.40rem;
   display: flex;
   justify-content: center;
 }
 
 .navigation-auto div:not(:last-child){
-  margin-right: 70px;
+  margin-right: 4.375rem;
 }
 
 #radio1:checked ~ .navigation-auto .auto-btn1{
@@ -134,32 +134,32 @@ body{
 }
 
 .login h1{
-  padding: 80px;
+  padding: 5rem;
   font-family: 'Kreon';
   color: #188A1C;
-  font-size: 40px;
+  font-size: 2.5rem;
 }
 
 .email{
   display: flex;
   align-items: center;
-  padding: 5px 20px;
+  padding: 0.3125rem 1.25rem;
   background-color: #D9D9D9;
-  border-radius: 20px;
+  border-radius: 1.25rem;
 }
 
 .email i{
   color: #188A1C;
-  font-size: 27px;
+  font-size: 1.7rem;
 }
 
 .email input, input:focus{
-  height: 25px;
+  height: 1.56rem;
   width: 35vh;
   border: 0px;
   background-color: #D9D9D9;
   outline: 0;
-  padding-left: 10px;
+  padding-left: 0.625rem;
   color: #188A1C;
   font-family: 'Kreon';
   display: flex;
@@ -168,25 +168,25 @@ body{
 .password{
   display: flex;
   align-items: center;
-  padding: 5px 20px;
+  padding: 0.3125rem 1.25rem;
   background-color: #D9D9D9;
-  border-radius: 20px;
-  margin-top: 40px;
-  margin-bottom: 90px;
+  border-radius: 1.25rem;
+  margin-top: 2.5rem;
+  margin-bottom: 5.625rem;
 }
 
 .password i{
   color: #188A1C;
-  font-size: 27px;
+  font-size: 1.7rem;
 }
 
 .password input, input:focus{
-  height: 25px;
+  height: 1.6rem;
   width: 35vh;
   border: 0px;
   background-color: #D9D9D9;
   outline: 0;
-  padding-left: 10px;
+  padding-left: 0.625rem;
   color: #188A1C;
   font-family: 'Kreon';
 }
@@ -201,8 +201,8 @@ body{
   width: 12vw;
   height: 6vh;
   background: linear-gradient(to right, #188A1C 39%, #062407 98%);
-  border-radius: 30px;
-  margin-bottom: 25px;
+  border-radius: 1.875rem;
+  margin-bottom: 1.6rem;
   border: none;
   transition: all 0.5s ease-in-out;
 }
@@ -212,7 +212,7 @@ body{
   font-family: 'Kreon';
   justify-content: center;
   align-items: center;
-  font-size: 15px;
+  font-size: 1rem;
   cursor: pointer;
 }
 
