--- a/style_cad.css
+++ b/style_cad.css
@@ -14,27 +14,27 @@
   justify-content: space-between;
 }
 h1 {
-  margin: 34px;
-  border-bottom: 3px solid;
+  margin: 2.2rem;
+  border-bottom: 0.2rem solid;
   border-color: rgb(24, 138, 28);
   font-weight: bold;
-  font-size: 40px;
+  font-size: 2.5rem;
 }
 
 .content1 {
   display: flex;
   flex-wrap: wrap;
   flex: 30%;
-  margin: 12px;
-  padding: 20px;
+  margin: 0.75rem;
+  padding: 1.25rem;
   flex-direction: column;
 }
 .content2 {
   display: flex;
   flex-wrap: wrap;
   flex: 30%;
-  margin: 12px;
-  padding: 20px;
+  margin: 0.75rem;
+  padding: 1.25rem;
   flex-direction: column;
 }
 .item {
@@ -42,8 +42,8 @@ h1 {
   flex-wrap: nowrap;
 }
 label {
-  margin-top: 15px;
-  margin-bottom: 15px;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .item .item2:hover {
@@ -52,10 +52,10 @@ label {
 }
 
 input {
-  width: 220px;
+  width: 13.75rem;
   border: none;
   font-weight: normal;
-  border-bottom: 2px solid rgb(24, 138, 28);
+  border-bottom: 0.2rem solid rgb(24, 138, 28);
   outline: 0;
 }
 .item2 {
@@ -64,9 +64,9 @@ input {
   flex-wrap: wrap;
   justify-content: center;
   color: #ffff;
-  width: 130px;
-  border-radius: 25px;
-  padding: 13px;
+  width: 8.2rem;
+  border-radius: 1.6rem;
+  padding: 0.9rem;
   background: linear-gradient(to right, rgb(24, 138, 28) 39%, #062407 98%);
   border: 1px solid rgb(24, 138, 28);
   transition: all 0.5s ease-in-out;
@@ -76,7 +76,7 @@ input {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  margin-top: 50px;
+  margin-top: 1.5rem;
 }
 
 @media screen and (max-width: 600px) {
