--- a/Css_login.css
+++ b/Css_login.css
@@ -13,7 +13,7 @@ body{
   height: 100vh;
   overflow: hidden;
   border-top-right-radius: 1.5625rem;
-  border-bottom-right-radius:  1.5625rem;
+  border-bottom-right-radius: 1.5625rem;
 }
 
 .slides{
@@ -33,23 +33,23 @@ body{
 }
 
 .slide img{
-  width: 58rem;
+  width: 57.625rem;
   height: 100vh;
   background-size: cover;
 }
 
 .manual-navigation{
   position: absolute;
-  width: 800px;
-  margin-top: -40px;
+  width: 50rem;
+  margin-top: -2.5rem;
   display: flex;
   justify-content: center;
 }
 
 .manual-btn{
-  border: 0.125rem solid white;
-  padding: 0.3125rem;
-  border-radius: 0.625rem;
+  border: .125rem solid white;
+  padding: .3125rem;
+  border-radius: .625rem;
   cursor: pointer;
   transition: 1s;
 }
@@ -83,9 +83,9 @@ body{
 }
 
 .navigation-auto div{
-  border: 0.125rem solid blue;
-  padding: 0.3125rem;
-  border-radius: 0.625rem;
+  border: .125rem solid blue;
+  padding: .3125rem;
+  border-radius: .625rem;
   cursor: pointer;
   transition: 1s;
 }
@@ -93,7 +93,7 @@ body{
 .navigation-auto {
   position: absolute;
   width: 50rem;
-  margin-top: 43.40rem;
+  margin-top: 43.4063rem;
   display: flex;
   justify-content: center;
 }
@@ -143,23 +143,23 @@ body{
 .email{
   display: flex;
   align-items: center;
-  padding: 0.3125rem 1.25rem;
+  padding: .3125rem 1.25rem;
   background-color: #D9D9D9;
   border-radius: 1.25rem;
 }
 
 .email i{
   color: #188A1C;
-  font-size: 1.7rem;
+  font-size: 1.6875rem;
 }
 
 .email input, input:focus{
-  height: 1.56rem;
+  height: 1.5625rem;
   width: 35vh;
-  border: 0px;
+  border: 0rem;
   background-color: #D9D9D9;
   outline: 0;
-  padding-left: 0.625rem;
+  padding-left: .625rem;
   color: #188A1C;
   font-family: 'Kreon';
   display: flex;
@@ -168,7 +168,7 @@ body{
 .password{
   display: flex;
   align-items: center;
-  padding: 0.3125rem 1.25rem;
+  padding: .3125rem 1.25rem;
   background-color: #D9D9D9;
   border-radius: 1.25rem;
   margin-top: 2.5rem;
@@ -177,16 +177,16 @@ body{
 
 .password i{
   color: #188A1C;
-  font-size: 1.7rem;
+  font-size: 1.6875rem;
 }
 
 .password input, input:focus{
-  height: 1.6rem;
+  height: 1.5625rem;
   width: 35vh;
-  border: 0px;
+  border: 0rem;
   background-color: #D9D9D9;
   outline: 0;
-  padding-left: 0.625rem;
+  padding-left: .625rem;
   color: #188A1C;
   font-family: 'Kreon';
 }
@@ -202,7 +202,7 @@ body{
   height: 6vh;
   background: linear-gradient(to right, #188A1C 39%, #062407 98%);
   border-radius: 1.875rem;
-  margin-bottom: 1.6rem;
+  margin-bottom: 1.5625rem;
   border: none;
   transition: all 0.5s ease-in-out;
 }
@@ -212,7 +212,7 @@ body{
   font-family: 'Kreon';
   justify-content: center;
   align-items: center;
-  font-size: 1rem;
+  font-size: .9375rem;
   cursor: pointer;
 }
 
