--- a/style_cad.css
+++ b/style_cad.css
@@ -14,8 +14,8 @@
   justify-content: space-between;
 }
 h1 {
-  margin: 2.2rem;
-  border-bottom: 0.2rem solid;
+  margin: 2.125rem;
+  border-bottom: .1875rem solid;
   border-color: rgb(24, 138, 28);
   font-weight: bold;
   font-size: 2.5rem;
@@ -25,7 +25,7 @@ h1 {
   display: flex;
   flex-wrap: wrap;
   flex: 30%;
-  margin: 0.75rem;
+  margin: .75rem;
   padding: 1.25rem;
   flex-direction: column;
 }
@@ -33,7 +33,7 @@ h1 {
   display: flex;
   flex-wrap: wrap;
   flex: 30%;
-  margin: 0.75rem;
+  margin: .75rem;
   padding: 1.25rem;
   flex-direction: column;
 }
@@ -42,8 +42,8 @@ h1 {
   flex-wrap: nowrap;
 }
 label {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+  margin-top: .9375rem;
+  margin-bottom: .9375rem;
 }
 
 .item .item2:hover {
@@ -55,7 +55,7 @@ input {
   width: 13.75rem;
   border: none;
   font-weight: normal;
-  border-bottom: 0.2rem solid rgb(24, 138, 28);
+  border-bottom: .125rem solid rgb(24, 138, 28);
   outline: 0;
 }
 .item2 {
@@ -64,11 +64,11 @@ input {
   flex-wrap: wrap;
   justify-content: center;
   color: #ffff;
-  width: 8.2rem;
-  border-radius: 1.6rem;
-  padding: 0.9rem;
+  width: 8.125rem;
+  border-radius: 1.5625rem;
+  padding: .8125rem;
   background: linear-gradient(to right, rgb(24, 138, 28) 39%, #062407 98%);
-  border: 1px solid rgb(24, 138, 28);
+  border: .0625rem solid rgb(24, 138, 28);
   transition: all 0.5s ease-in-out;
 }
 
@@ -76,10 +76,10 @@ input {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  margin-top: 1.5rem;
+  margin-top: 3.125rem;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 37.5rem) {
   .item {
     flex-wrap: wrap;
   }
